# gnubg-android

./: .gitignore  CHANGELOG.md  CLAUDE.md  MASTER_V0.9.md  MASTER_V6.md  MASTER_V8.md  Makefile  NOTICE  PROVENANCE.md  README.md  RELEASE_NOTES.md  RELEASING.md  TRADEMARKS.md  android-arm64.cross  autopuller.sh  build.sh  build_and_deploy.sh  build_glib_android.sh  build_native_android.sh  debug_pipeline.sh  filelist.txt  init_repo.sh  keystore.properties.example  patch_engine.sh  patch_gnubg.py  pull_dependencies.sh  release.sh  release_fdroid.sh  reorganise.sh  run.sh
code-analysis/: README.md  System_Dependencies.md  collect_codebase_audit.sh  collect_current_review_status.sh  collect_debug_packet.sh
doc/: HANDOVER_gnubg_android.md  MASTER_V0.8.1.aux  MASTER_V0.8.1.out  MASTER_V0.8.1.toc  MASTER_V0.8.2.aux  MASTER_V0.8.2.out  MASTER_V0.8.2.tex  MASTER_V0.8.5.aux  MASTER_V0.8.5.out  MASTER_V0.8.5.tex  MASTER_V0.8.5.toc  MASTER_V0.8.6.aux  MASTER_V0.8.6.out  MASTER_V0.8.6.tex  MASTER_V0.8.6.toc  MASTER_V0.8.7.aux  MASTER_V0.8.7.out  MASTER_V0.8.7.tex  MASTER_V0.8.7.toc  MASTER_V0.8.9.tex  MASTER_V0.8.tex  MASTER_V0.9.1.tex  MASTER_V0.9.3.tex  MASTER_V0.9.4.aux  MASTER_V0.9.4.out  MASTER_V0.9.4.tex  MASTER_V0.9.tex  Makefile  gnubg.tex
docs/: ARCHITECTURE.md  ARCHITECTURE_ANALYSE_MODE.md  ARCHITECTURE_FOR_CONTRIBUTORS.md  BOARD_RENDERER_ARCHITECTURE.md  BUILD.md  CHANGELOG-0.8.9.md  COACH.md  COACH_CUBE_PLAN.md  COACH_MODE_PLAN.md  COMPANION.md  CORPUS_ENTRIES_DRAFT.md  CORPUS_HARVEST_PLAN.md  CORPUS_PLAN.md  DELTA_NARRATOR_PLAYBOOK.md  FDROID_SUBMISSION.md  HANDOVER.md  INPUT_DICTIONARY.md  INSIGHT_COVERAGE.md  INSIGHT_JOURNEY_AND_ARCHITECTURE.md  KNOWN-LIMITATIONS.md  MASTER_V0.9.md  MULTICORE_ANALYSIS.md  PAPER_HONEST_VERBOSITY.md  PERSONAL_STATS_DESIGN.md  PHASE3_TUTOR_ANALYSIS.md  POSITION_YOUR_PERSONAL_STATS.md  QUICKSTART.docx  QUICKSTART.md  README.md  RELEASE_0.9.1.md  RELEASE_SIGNING.md  ROADMAP.md  ROADMAP_ANALYSIS_PARITY.md  SETTINGS-UX-BLUEPRINT.md  STATUS.md  TECHNICAL-NOTES.md  THREADING.md  TUTOR_MODE_ARCHITECTURE.md  TUTOR_MODE_IMPLEMENTATION_PLAN.md  TUTOR_VISION.md  (+2 more)
engine-core/: analysis.c  analysis.h  backgammon.h  bearoff.h  bearoffgammon.c  boardpos.h  common.h  config.h  dice.c  dice.h  drawboard.h  eval.c  eval.h  export.c  export.h  external.c  format.c  format.h  formatgs.c  formatgs.h  matchequity.c  matchequity.h  matchid.h  mec.c  mec.h  movefilters.inc  multithread.c  multithread.h  output.c  output.h  play.c  positionid.h  progress.c  progress.h  render.h  renderprefs.c  rollout.c  rollout.h  set.c  sgf.c  (+5 more)
fdroid/: com.clavierhaus.gnubg.yml
gnubg-app/: README.md  gradle.properties  local.properties  settings.gradle.kts
jni-bridge/: CMakeLists.txt  analysis.h  config.h  drawboard.h  format.h  matchid.h  render.h  renderprefs.h
jni-bridge/include/: gnubg_mobile.h
jni-bridge/src/: android-app.c  gnubg_mobile.c  native-lib.c  stubs.c
jni-bridge/src/com/clavierhaus/gnubg/: Engine.kt
test-harness/: CMakeLists.txt
test-harness/src/: main.c  stubs.c
tmp/: commit-remove-standalone-tutor-v0824b.txt  inspect-homehub-for-tutor-removal.txt  remove-tutor-route-exact-v0824.txt  verify-remove-standalone-tutor-v0824.txt
tools/: backfill_checksums.sh  check_buildable_clone.sh  insight_log.py  setup_signing.sh  syntax_check.sh
(+159 files in other folders)
